--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typings": "^0.8.1"
   },
   "dependencies": {
-    "ramda": "^0.21.0"
+    "ramda": "^0.21.0",
+    "tslint": "^3.10.2"
   }
 }
